--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,11 @@ steps:
   displayName: 'Run a one-line script'
 
 - script: |
+    echo Your current directory:
+    pwd
+    echo all the files in the directory
     ls -lrt
+    echo your hostname is:
     hostname
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+    
   displayName: 'Run a multi-line script'
